<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--  translators: please do not change the name="..." attributes! -->

<string name="grade0">0</string>
<string name="grade1">1</string>
<string name="grade2">2</string>
<string name="grade3">3</string>
<string name="grade4">4</string>
<string name="grade5">5</string>
<string name="show">Show answer</string>
<string name="ok">Ok</string>

<string name="skip_card">Skip card</string>
<string name="schedule">Schedule</string>
<string name="settings">Settings</string>
<string name="card_statistics">Card Statistics</string>

<string name="select_card_dir">Select a card directory</string>

<string name="not_enough_memory_to_load">Not enough memory to load cards.</string>
<string name="fatal_error">Fatal Error</string>
<string name="no_card_loaded_text">Unexpected error: card not loaded.</string>
<string name="update_overdue_text">An export from Mnemogogo is overdue!</string>
<string name="update_today_text">An export from Mnemogogo is due today.</string>
<string name="no_card_dirs">No card directories could be found. Please export from Mnemogogo!</string>
<string name="corrupt_card_dir">The exported cards are corrupt.</string>

<string name="no_cards_title">No cards</string>
<string name="no_new_cards_title">No new cards</string>
<string name="no_cards_left">There are no new cards to review at this time.</string>
<string name="learn_ahead">Learn ahead of schedule</string>
<string name="replay_sounds">Replay sounds</string>

<string name="in_text">In</string>
<string name="day_text">day</string>
<string name="days_text">days</string>

<string name="statistics">Statistics</string>
<string name="easiness">Easiness:</string>
<string name="repetitions">Repetitions:</string>
<string name="lapses">Lapses:</string>
<string name="grade">Grade:</string>
<string name="days_since_last_repetition">Days since last repetition:</string>
<string name="days_until_next_repetition">Days until next repetition:</string>

<string name="info">Info</string>
<string name="about_author_label">Author:</string>
<string name="about_author">Timothy Bourke</string>
<string name="about_mnemosyne_label">Mnemosyne:</string>
<string name="about_mnemosyne">Peter Bienstman</string>
<string name="about_sm2_label">SM-2 Algorithm:</string>
<string name="about_sm2">Piotr Wozniak</string>
<string name="about_translations">Translation:</string>

<string name="no_cards_main">A valid card directory has not yet been selected.</string>

<string name="not_available">This feature is not available.</string>

<string name="setting_cat_operation">Operation</string>
<string name="setting_cat_appearance">Appearance</string>
<string name="setting_cat_misc">Miscellaneous</string>

<string name="setting_card_dir">Card directory</string>
<string name="setting_card_dir_summary">The location of the files exported from Mnemogogo.</string>
<string name="cannot_find_card_dirs">(None were found on this device!)</string>
<string name="setting_cards_to_load">Loading cards</string>
<string name="setting_cards_to_load_summary">Balance memory and speed when loading card contents.</string>
<string name="select_trade_off">Select compromise</string>

<string name="setting_center">Center card text</string>
<string name="setting_center_summary">Center question and answer texts.</string>
<string name="setting_touch_buttons">Onscreen buttons</string>
<string name="setting_touch_buttons_summary">Display buttons for showing answers and grading.</string>
<string name="setting_font_size">Card text size</string>
<string name="setting_font_size_summary">Set the size of text in cards.</string>
<string name="select_font_size">Select card text size</string>

<string name="setting_fullscreen_mode">Fullscreen mode</string>
<string name="setting_fullscreen_mode_summary">The status bar is hidden in fullscreen mode
(requires restart).</string>
<string name="setting_show_titlebar">Show titlebar</string>
<string name="setting_show_titlebar_summary">The title bar displays the category and
the number of cards to review.</string>

<string name="loading_card_dir">Loading statistics...</string>
<string name="loading_cards">Loading card contents...</string>
<string name="searching_for_card_dirs">Searching for card directories...</string>

<string-array name="entries_cards_to_load">
	<item>More loading, less memory</item>
	<item>Balance loading and memory</item>
	<item>Less loading, more memory</item>
</string-array>

<string-array name="entries_font_size">
    <item>Very small</item>
    <item>Small</item>
    <item>Normal</item>
    <item>Large</item>
    <item>Very large</item>
</string-array>

<string name="eula_title">License</string>
<string name="eula_accept">Accept</string>
<string name="eula_refuse">Refuse</string>

<string name="setting_two_grading_rows">Bigger buttons</string>
<string name="setting_two_grading_rows_summary">Show two rows of grading buttons in narrow screen mode.</string>

<string name="setting_auto_play">Play sounds automatically</string>
<string name="setting_auto_play_summary">Play any sounds as soon as a card is shown.</string>

<string name="setting_button_pos">Button position</string>
<string name="setting_button_pos_summary">Location of the buttons in wide screen mode.</string>
<string name="select_button_pos">Place the buttons</string>
<string-array name="entries_button_pos">
    <item>At bottom</item>
    <item>At left</item>
    <item>At right</item>
</string-array>

<string name="no_cards_step1">At a PC: Export cards from
Mnemosyne to your SD card using the Mnemogogo plugin.</string>
<string name="no_cards_step2">On this phone: choose the exported directory from the
Mnemododo Settings screen (press the Menu button, and then choose Settings).</string>

<string name="setting_keys">Key assignment</string>
<string name="setting_keys_summary">Assign keys for showing answers and grading.</string>
<string name="select_keys">Press the key to:</string>
<string name="key_show">Show the answer</string>
<string name="key_grade0">Grade a card 0</string>
<string name="key_grade1">Grade a card 1</string>
<string name="key_grade2">Grade a card 2</string>
<string name="key_grade3">Grade a card 3</string>
<string name="key_grade4">Grade a card 4</string>
<string name="key_grade5">Grade a card 5</string>
<string name="key_replay_sounds">Replay sounds</string>

<!-- maximum 325 characters -->
<string name="market_description">
Mnemododo allows spaced-repetition flash cards from Mnemosyne to be reviewed on a mobile phone.

Both Mnemosyne and the Mnemogogo plugin must be installed on your PC. Cards cannot be edited on your phone.

There is support for HTML markup (including LaTeX), graphics (including maps), and sound.
</string>

<!-- maximum 80 characters -->
<string name="market_promo">
Use with Mnemosyne on your PC or Mac for spaced-repetition learning on the go!
</string>

<string name="setting_restrict_search">Restrict directory search</string>
<string name="setting_restrict_search_summary">Only look for card directories under a specific path.</string>
<string name="setting_restrict_search_title">Enter a path to search for card directories:</string>
<string name="setting_restrict_search_message">(Leave blank to search the whole phone.)</string>

<!-- new: needed for NL, FR, HR, ZH(simp.), ZH(trad.) -->

<string name="grade0_short_help">Forgotten completely.</string>
<string name="grade1_short_help">Forgotten.</string>
<string name="grade2_short_help">Very tricky.</string>
<string name="grade3_short_help">A bit tricky.</string>
<string name="grade4_short_help">Remembered.</string>
<string name="grade5_short_help">Too easy.</string>

<string name="grade01_help">You have forgotten this card completely.</string>
<string name="grade2_help">Barely correct answer. The interval was way too long.</string>
<string name="grade3_help">Correct answer, but with much effort. The interval was probably too long.</string>
<string name="grade4_help">Correct answer, with some effort. The interval was probably just right.</string>
<string name="grade5_help">Correct answer, but without any difficulties. The interval was probably too short.</string>

<string name="grade0_new_help">You don't remember this card yet.</string>
<string name="grade1_new_help">Like '0', but it's getting more familiar. Show it less often.</string>
<string name="grade2345_new_help">You've memorised this card now and will probably remember it for a few days.</string>

<!-- new: activate categories -->
<string name="categories">Categories</string>
<string name="activate_categories">Activate categories</string>

<!-- translators: please do not translate below this line! -->

<string name="app_name">Mnemododo</string>

<string-array name="values_cards_to_load">
    <item>25</item>
    <item>50</item>
    <item>100</item>
</string-array>

<string-array name="values_font_size">
    <item>x-small</item>
    <item>smaller</item>
    <item>medium</item>
    <item>larger</item>
    <item>x-large</item>
</string-array>

<string-array name="values_button_pos">
    <item>0</item>
    <item>1</item>
    <item>2</item>
</string-array>

</resources>
