<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/layout_root"
  	android:orientation="vertical"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:padding="10dp"
  	android:gravity="center_horizontal"
  >
    <TextView   
        android:text="@string/select_keys"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingRight = "40dp"
    />
	<TextView	
		android:id="@+id/key_show"
		android:text="@string/key_show"
		android:textStyle="bold"
		android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView   
        android:id="@+id/key_grade0"
        android:text="@string/key_grade0"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView   
        android:id="@+id/key_grade1"
        android:text="@string/key_grade1"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView   
        android:id="@+id/key_grade2"
        android:text="@string/key_grade2"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView
        android:id="@+id/key_grade3"
        android:text="@string/key_grade3"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView
        android:id="@+id/key_grade4"
        android:text="@string/key_grade4"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView
        android:id="@+id/key_grade5"
        android:text="@string/key_grade5"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView
        android:id="@+id/key_replay_sounds"
        android:text="@string/key_replay_sounds"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />

</LinearLayout>
