<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/layout_root"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:padding="10dp"
  	android:gravity="center_horizontal"
  >

	  <LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/grade_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/grade"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/grade"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>

	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/easiness_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/easiness"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/easiness"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>

	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/repetitions_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/repetitions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/repetitions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>

	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/lapses_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/lapses"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/lapses"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>
	
	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/days_since_last_repetition_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/days_since_last_repetition"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/days_since_last_repetition"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>

	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:id="@+id/days_until_next_repetition_layout"
	  	android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  >
		<TextView	
			android:id="@+id/label"
			android:text="@string/days_until_next_repetition"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingRight="5dp"
		/>
		<TextView
			android:id="@+id/days_until_next_repetition"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left"
		/>
	</LinearLayout>

</LinearLayout>
